fixed bugs for mobile view (eg. weather not showing and fixed layout in navbar)

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -24,6 +24,8 @@
   font-weight: 500;
   color: var(--header-text-color);
   transition: font-size 0.3s ease;
+  white-space: nowrap;
+  /* Prevents name from wrapping */
 }
 
 .weather-display {
@@ -37,16 +39,12 @@
   color: var(--primary-color);
 }
 
-.location-name-header {
-  font-size: 0.9rem;
-  font-weight: 400;
-  color: var(--header-text-color);
-}
-
+.location-name-header,
 .temperature-header {
   font-size: 0.9rem;
-  font-weight: 600;
+  font-weight: 500;
   color: var(--header-text-color);
+  white-space: nowrap;
 }
 
 .nav-links-desktop {
@@ -59,7 +57,6 @@
   text-decoration: none;
   margin-left: 20px;
   font-weight: 500;
-  transition: color 0.4s ease;
   padding: 8px 12px;
   border-radius: 8px;
   position: relative;
@@ -99,12 +96,18 @@
   margin-left: 15px;
 }
 
-.theme-toggle {
+.theme-toggle-desktop,
+.theme-toggle-mobile {
   background: none;
   border: none;
   color: var(--header-text-color);
   font-size: 1.5rem;
   cursor: pointer;
+}
+
+.theme-toggle-mobile {
+  display: none;
+
 }
 
 .bar {
@@ -122,11 +125,6 @@
   padding: 20px 0;
 }
 
-@media (max-width: 1100px) {
-  .weather-display {
-    display: none;
-  }
-}
 
 @media (max-width: 900px) {
   .nav-links-desktop {
@@ -137,11 +135,35 @@
     display: block;
   }
 
+  .theme-toggle-desktop {
+    display: none;
+    /* Hide desktop toggle */
+  }
+
+  .theme-toggle-mobile {
+    display: block;
+    /* Show mobile toggle */
+  }
+
   .nav-links-mobile {
     display: flex;
   }
 
   .logo {
     font-size: 1.2rem;
+  }
+
+  .weather-display {
+    display: none;
+
+  }
+
+  .navbar-left {
+    flex-grow: 1;
+  }
+
+  .navbar-right {
+    margin-left: auto;
+
   }
 }
